fix: remote calling

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,10 @@
 <body>
 <video id="video1" autoplay></video>
 <video id="video2" autoplay></video>
+<form id="form">
+    <input type="text" title="callee" name="callee">
+    <button type="submit">Call</button>
+</form>
 <script src="./index.js"></script>
 </body>
 </html>
