--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 <video id="video2" autoplay></video>
 <form id="form"> <input type="text" title="callee" name="callee"> <button type="submit">Call</button>
 </form>
-<script src="/src.29dca2cf.js"></script>
+<script src="src.29dca2cf.js"></script>
 </body></html>
